--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,10 @@
       "es2017",
       "esnext.asynciterable"
     ],
+    "baseUrl": "./packages",
+    "paths": {
+      "@openauth/core": ["core/src"]
+    },
     "emitDeclarationOnly": true,
     "declaration": true,
     "pretty": true,
