--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "npm run test:lint && npm run test:unit",
     "test:lint": "eslint 'packages/*/src/**/*.ts'",
     "test:unit": "jest",
-    "deploy": "npm run test && lerna publish from-package"
+    "deploy": "npm run build && npm run test && lerna publish from-package"
   },
   "devDependencies": {
     "@babel/cli": "7.8.4",
