--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@types/jest": "25.2.1",
     "@types/node": "12.12.35",
     "eslint": "6.8.0",
-    "eslint-config-graphity": "^0.6.3",
+    "eslint-config-stable": "^0.7.4",
     "jest": "25.3.0",
     "lerna": "3.20.2",
     "lerna-update-wizard": "0.17.8",
