--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@babel/preset-typescript": "7.10.4",
     "@types/jest": "26.0.9",
     "@types/node": "12.12.54",
+    "env-cmd": "^10.1.0",
     "eslint": "7.6.0",
     "eslint-config-stable": "0.8.0",
     "jest": "26.2.2",
     "lerna": "3.22.1",
     "lerna-update-wizard": "0.17.8",
     "lerna-wizard": "1.1.1",
+    "playwright": "^1.2.1",
     "rimraf": "3.0.2",
     "ts-jest": "26.1.4",
     "typescript": "3.9.7"
