--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,11 @@
     "esModuleInterop": true,
     "noImplicitReturns": true,
     "experimentalDecorators": true
-  }
+  },
+  "files": [
+    "./types/jest.d.ts"
+  ],
+  "include": [
+    "packages/**/*.ts"
+  ]
 }
